compiler/testData/diagnostics/testsWithJsStdLib/native/anonymousInitializer.kt
external class A {
    <!EXTERNAL_ANONYMOUS_INITIALIZER!>init {
        definedExternally
    }<!>
}